--- a/Recipedia/RecipeSearcher/templates/register_done.html
+++ b/Recipedia/RecipeSearcher/templates/register_done.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Welcome {{ new_user.first_name }}!</h1>
-<p>Your account has been successfully created. Now you can <a
-href='/RecipeSearcher/login'> log in</a>.</p>
+<div class = "row justify-content-md-center pt-5">
+    <div class="card" style="width: 35rem; ">
+    <div class="card-body">
+        <h5 class="card-title text-center text-success">Success!</h5>
+        <h6 class="text-muted text-center">Welcome {{ new_user.first_name }}!</h6>
+        <p>Your account has been successfully created. Now you can <a
+        href='/RecipeSearcher/login'> log in</a>.</p>
+        </p>
+    </div>
+    </div>
+</div>
 {% endblock %}
