--- a/Recipedia/RecipeSearcher/templates/base.html
+++ b/Recipedia/RecipeSearcher/templates/base.html
@@ -42,7 +42,7 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="header__top__left">
                             <ul>
-                                <a><img src="{% static 'img/logo.png' %}" style='height:50px;' alt=""></a>
+                                <a href="/"><img src="{% static 'img/logo.png' %}" style='height:50px;' alt="" ></a>
                             </ul>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 Hello, {{ request.user.first_name }}
                                 <span class="arrow_carrot-down"></span>
                                 <ul>
-                                    <li><a href="/RecipeSearcher/{{request.user.username}}" ">profile</a></li>
+                                    <li><a href="/RecipeSearcher/{{request.user.username}}">profile</a></li>
                                     <li><a href="/RecipeSearcher/logout">Logout</a></li>
                                 </ul>
                                 {% else %}
