--- a/Recipedia/RecipeSearcher/templates/results.html
+++ b/Recipedia/RecipeSearcher/templates/results.html
@@ -54,7 +54,7 @@
                     <div class='row mb-4 mx-4'>
                         <div class='input-group'>
                             <div class='input-group-prepend'> <span class='input-group-text icon_search'></span></div>
-                            {{search_form.keyword}}   <button class="btn" type="submit" name="button">Search</button>
+                            {{search_form.keyword}}   <button class="btn border border-secondary" type="submit" name="button">Search</button>
                         </div>
                     </div>
 
@@ -70,31 +70,37 @@
                     <div class='row mx-4'>
                         <div class="row justify-content-md-center">
                             <div class="card-group">
-                                {%for recipe in recipes%}
-                                <div class="col-lg-4 col-md-6 mb-4">
-                                    <div class="card">
-                                        <img class="card-img-top" src={{recipe.image}} alt="Card image cap">
-                                        <div class="card-body">
-                                            <h5 class="card-title">{{recipe.label}}</h5>
-                                            <button class="btn btn-link btn-sm" type="button" data-toggle="collapse" data-target="#{{recipe.label|slugify}}" aria-expanded="false" aria-controls="multiCollapseExample2">More info</button>
-                                            <div class="col">
-                                                <div class="collapse multi-collapse" id="{{recipe.label|slugify}}">
-                                                    <div class="card card-body">
-                                                        <ul class="list-group list-group-flush">
-                                                            <li class="list-group-item">Cals/serving: {{recipe.calories|floatformat}}</li>
-                                                            <li class="list-group-item">Yield: {{recipe.yield}} servings</li>
-                                                            <li class="list-group-item">Total ingredients: {{recipe.ingredients|length}}</li>
-                                                            <li class="list-group-item"><a href={{recipe.url}}>Link to recipe </a></li>
-                                                            <li class="list-group-item"><a href={{recipe.uri}}>uri </a></li>
-                                                        </ul>
+                                {% if recipes %}
+                                    {%for recipe in recipes%}
+                                    <div class="col-lg-4 col-md-6 mb-4">
+                                        <div class="card">
+                                            <img class="card-img-top" src={{recipe.image}} alt="Card image cap">
+                                            <div class="card-body">
+                                                <h5 class="card-title">{{recipe.label}}</h5>
+                                                <button class="btn btn-link btn-sm" type="button" data-toggle="collapse" data-target="#{{recipe.label|slugify}}" aria-expanded="false" aria-controls="multiCollapseExample2">More info</button>
+                                                <div class="col">
+                                                    <div class="collapse multi-collapse" id="{{recipe.label|slugify}}">
+                                                        <div class="card card-body">
+                                                            <ul class="list-group list-group-flush">
+                                                                <li class="list-group-item">Cals/serving: {{recipe.calories|floatformat}}</li>
+                                                                <li class="list-group-item">Yield: {{recipe.yield}} servings</li>
+                                                                <li class="list-group-item">Total ingredients: {{recipe.ingredients|length}}</li>
+                                                                <li class="list-group-item"><a href={{recipe.url}}>Link to recipe </a></li>
+                                                                <li class="list-group-item"><a href={{recipe.uri}}>uri </a></li>
+                                                            </ul>
+                                                        </div>
                                                     </div>
                                                 </div>
+                                                <p class="card-text"><small class="text-muted"><h7><a>From: {{recipe.source}}</a></h7></small></p>
                                             </div>
-                                            <p class="card-text"><small class="text-muted"><h7><a>From: {{recipe.source}}</a></h7></small></p>
                                         </div>
                                     </div>
+                                    {%endfor%}
+                                {% else %}
+                                <div class="col text-center">
+                                    <h1>No Results found. Try a different set of ingredients.</h1>
                                 </div>
-                                {%endfor%}
+                                {% endif %}
                             </div>
                         </div>
                     </div>
