--- a/Recipedia/RecipeSearcher/templates/index.html
+++ b/Recipedia/RecipeSearcher/templates/index.html
@@ -55,7 +55,7 @@
                     <div class='row'>
                         <div class='input-group'>
                             <div class='input-group-prepend'> <span class='input-group-text icon_search'></span></div>
-                            {{search_form.keyword}}<button class="btn" type="submit" name="button">Search</button>
+                            {{search_form.keyword}} <button class="btn border border-secondary" type="submit" name="button">Search</button>
                         </div>
                     </div>
                 </div>
